ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signavio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: temidayooyedele.signavio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signavio-app1-service
                port:
                  number: 80
          - path: /reversed
            pathType: Prefix
            backend:
              service:
                name: reverse-app-service
                port:
                  number: 80
